--- a/BookStore/Views/Home/Wishlist.cshtml
+++ b/BookStore/Views/Home/Wishlist.cshtml
@@ -19,9 +19,7 @@
                                     <th>Price</th>
                                 </tr>
                             </thead>
-                            <tbody id="listWishlist">
-                                
-                            </tbody>
+                            <tbody id="listWishlist"> </tbody>
                         </table>
                     </div>
                 </form>
