--- a/BookStore/wwwroot/css/style.css
+++ b/BookStore/wwwroot/css/style.css
@@ -9570,7 +9570,7 @@ input.cart-plus-minus-box.book-detail{
     justify-content: center;
     align-items: center;
 }
-.cart-plus-minus.book-detail{
+.cart-plus-minus.detail-book {
     border: 1px solid #dcdcdc;
     overflow: hidden;
     padding: 0px 0 4px 4px;
@@ -9579,6 +9579,7 @@ input.cart-plus-minus-box.book-detail{
     justify-content: center;
     align-items: center;
 }
+
 .quickview-plus-minus {
     display: flex;
     justify-content: flex-start;
