--- a/BookStore/Views/Home/CheckOut.cshtml
+++ b/BookStore/Views/Home/CheckOut.cshtml
@@ -2,6 +2,11 @@
 	ViewData["Title"] = "CheckOut";
 }
 @model BusinessObjects.DTO.UserPayment
+<style>
+	.header-nav {
+		display: none !important;
+	}
+</style>
 <!-- checkout-area start -->
 <div class="checkout-area ptb-100">
 	<div class="container">
@@ -105,6 +110,14 @@
 					</div>
 				</div>
 			</form>
+		</div>
+		<div class="pt-5">
+			<h6 class="mb-3 back">
+				<a asp-controller="Home" asp-action="Shop" class="text-body fw-semibold">
+					<i class="fas fa-long-arrow-alt-left ms-5 me-2"></i>
+					Back to shop
+				</a>
+			</h6>
 		</div>
 	</div>
 </div>
