--- a/BookStore/Views/Home/Detail.cshtml
+++ b/BookStore/Views/Home/Detail.cshtml
@@ -47,32 +47,11 @@
 						<div class="product-details-large tab-content">
 							<div class="tab-pane active show fade" id="pro-details1" role="tabpanel">
 								<div class="easyzoom easyzoom--overlay ">
-									<a href="/img/product/book/@ViewBag.Image">
-										<img src="/img/product/book/@ViewBag.BookDetail.Image" alt="">
+									<a href="@ViewBag.api/@ViewBag.Image">
+										<img src="@ViewBag.api/@ViewBag.BookDetail.Image" alt="">
 									</a>
 								</div>
 							</div>
-							@* <div class="tab-pane fade" id="pro-details2" role="tabpanel">
-								<div class="easyzoom easyzoom--overlay">
-									<a href="/img/product/book/@ViewBag.BookDetail.Image">
-										<img src="/img/product/book/@ViewBag.BookDetail.Image" alt="">
-									</a>
-								</div>
-							</div>
-							<div class="tab-pane fade" id="pro-details3" role="tabpanel">
-								<div class="easyzoom easyzoom--overlay">
-									<a href="/img/product/book/@ViewBag.BookDetail.Image">
-										<img src="/img/product/book/@ViewBag.BookDetail.Image" alt="">
-									</a>
-								</div>
-							</div>
-							<div class="tab-pane fade" id="pro-details4" role="tabpanel">
-								<div class="easyzoom easyzoom--overlay">
-									<a href="/img/product/book/@ViewBag.BookDetail.Image">
-										<img src="/img/product/book/@ViewBag.BookDetail.Image" alt="">
-									</a>
-								</div>
-							</div> *@
 						</div>
 					</div>
 				</div>
@@ -80,13 +59,13 @@
 			<div class="col-md-12 col-lg-5 col-12">
 				<div class="product-details-content">
 					<h3>@ViewBag.BookDetail.Title</h3>
-					<div class="rating-number" onload="checkRate(@ViewBag.BookDetail.Rate, @ViewBag.BookDetail.Id)"> </div>
+					<div class="rating-number"> @GenerateStarRating(@ViewBag.BookDetail.Rate, 5)</div>
 					<div class="details-price">
 						<span>$@ViewBag.BookDetail.SellingPrice</span>
 					</div>
 					<p>@ViewBag.BookDetail.Description</p>
 					<div class="quickview-plus-minus">
-						<div class="cart-plus-minus">
+						<div class="cart-plus-minus detail-book">
 							<div class="inc qtybutton" onclick="BtnMinus()">-</div>
 							<input type="text" value="1" name="qtybutton" id="quantity" class="cart-plus-minus-box">
 							<div class="inc qtybutton" onclick="BtnPlus()">+</div>
@@ -95,7 +74,9 @@
 							<a class="btn-hover-black" onclick="AddToCart(@ViewBag.BookDetail.Id)">add to cart</a>
 						</div>
 						<div class="quickview-btn-wishlist">
-							@GenerateFavoriteIcon(ViewBag.BookDetail.IsFavorite, @ViewBag.BookDetail.Id)
+							<a cite="btn-hover">
+								@GenerateFavoriteIcon(ViewBag.BookDetail.IsFavorite, @ViewBag.BookDetail.Id)
+							</a>
 						</div>
 					</div>
 					<div class="product-details-cati-tag mt-35">
@@ -140,7 +121,7 @@
 
 		<form method="POST" id="reviewForm">
 			<h2>Leave your comments here</h2>
-			<input type="hidden" id="bookId" value="@Model.Id">
+			<input type="hidden" id="bookId" value="@ViewBag.BookDetail.Id">
 			<div class="mb-3">
 				<label for="comment" class="form-label">Comment</label>
 				<textarea class="form-control" id="comment" rows="3"></textarea>
@@ -194,7 +175,7 @@
 	<div class="container">
 		<div class="product-description-review text-center">
 			<div class="description-review-title nav" role="tablist">
-                <h3>Reviews (0)</h3>
+				<h3>Reviews (0)</h3>
 			</div>
 			<div class="review-section tab-content" id="book-review">
 				<div class="review-display" role="tabpanel">
@@ -222,7 +203,7 @@
 						<div class="product-img">
 							<div class="product-img list-img-width">
 								<a asp-controller="Home" asp-action="Detail" asp-route-id="@book.Id">
-									<img src="/img/product/book/@book.Image" alt="">
+									<img src="@ViewBag.api/@book.Image" alt="">
 								</a>
 								<span>hot</span>
 							</div>
