--- a/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/Views/Home/Index.cshtml
@@ -58,8 +58,16 @@
 	public IHtmlContent GenerateFavoriteIcon(bool isFavorite, int BookId)
 	{
 		var favoriteHtml = isFavorite
-			? $"<i class=\"bi bi-suit-heart-fill\" onclick=\"DeleteToWishlist({BookId})\"></i>"
-			: $"<i class=\"bi bi-suit-heart\" onclick=\"AddToWishlist({BookId})\"></i>";
+			? $"<i class=\"bi bi-suit-heart-fill\" id=\"wishlist_book_{BookId}\" onclick=\"DeleteWishlist({BookId})\"></i>"
+			: $"<i class=\"bi bi-suit-heart\" id=\"wishlist_book_{BookId}\" onclick=\"AddToWishlist({BookId})\"></i>";
+		return new HtmlString(favoriteHtml);
+	}
+
+	public IHtmlContent GenerateFavoriteIcon2(bool isFavorite, int BookId)
+	{
+		var favoriteHtml = isFavorite
+			? $"<i class=\"bi bi-suit-heart-fill\" id=\"wishlist_book_2_{BookId}\" onclick=\"DeleteWishlist({BookId})\"></i>"
+			: $"<i class=\"bi bi-suit-heart\" id=\"wishlist_2_book_{BookId}\" onclick=\"AddToWishlist({BookId})\"></i>";
 		return new HtmlString(favoriteHtml);
 	}
 
@@ -92,7 +100,7 @@
 										<div class="product-wrapper">
 											<div class="product-img-2">
 												<a asp-controller="Home" asp-action="Detail" asp-route-id="@book.BookId">
-													<img src="/img/product/book/@book.BookImage" alt="">
+													<img src="@ViewBag.api/@book.BookImage" alt="">
 												</a>
 												<div class="product-action-2">
 													<a class="animate-left add-style-2" title="Add To Cart" onclick="AddToCart(@book.BookId)">Add to Cart <i class="ti-shopping-cart"></i></a>
@@ -143,7 +151,7 @@
 										<div class="product-action-2">
 											<a class="animate-left add-style-2" title="Add To Cart" onclick="AddToCart(@Model.TopAuthors[i].BookAuthors[j].BookId)">Add to Cart <i class="ti-shopping-cart"></i></a>
 											<a class="animate-right wishlist-style-2" title="wishlist" href="#">
-												@GenerateFavoriteIcon(@Model.TopAuthors[i].BookAuthors[j].IsFavourite, @Model.TopAuthors[i].BookAuthors[j].BookId)
+												@GenerateFavoriteIcon2(@Model.TopAuthors[i].BookAuthors[j].IsFavourite, @Model.TopAuthors[i].BookAuthors[j].BookId)
 											</a>
 										</div>
 									</div>
