--- a/BookStore/Views/Home/Shop.cshtml
+++ b/BookStore/Views/Home/Shop.cshtml
@@ -37,6 +37,14 @@
 		return new HtmlString(favoriteHtml);
 	}
 
+	public IHtmlContent GenerateFavoriteIcon2(bool isFavorite, int BookId)
+	{
+		var favoriteHtml = isFavorite
+			? $"<i class=\"bi bi-suit-heart-fill\" id=\"wishlist_book_2_{BookId}\" onclick=\"DeleteWishlist({BookId})\"></i>"
+			: $"<i class=\"bi bi-suit-heart\" id=\"wishlist_2_book_{BookId}\" onclick=\"AddToWishlist({BookId})\"></i>";
+		return new HtmlString(favoriteHtml);
+	}
+
 }
 
 <div class="shop-page-wrapper shop-page-padding ptb-100">
@@ -70,7 +78,7 @@
 							<ul>
 								@foreach (var item in Model.Filter.Publishers)
 								{
-									<li><a href="#"> @item.Name <span>@item.Quantity </span></a></li>
+									<li><a asp-route="displaybookbypublisher" asp-route-filterId="@item.Id"> @item.Name <span>@item.Quantity </span></a></li>
 								}
 							</ul>
 						</div>
@@ -81,7 +89,7 @@
 							<ul>
 								@foreach (var item in Model.Filter.Languages)
 								{
-									<li><a href="#"> @item.Name <span>@item.Quantity </span></a></li>
+									<li><a asp-route="displaybookbylanguage" asp-route-filterId="@item.Id"> @item.Name <span>@item.Quantity </span></a></li>
 								}
 							</ul>
 						</div>
@@ -92,7 +100,7 @@
 							<ul>
 								@foreach (var item in Model.Filter.Authors)
 								{
-									<li><a href="#"> @item.Name <span>@item.Quantity </span></a></li>
+									<li><a asp-route="displaybookbyauthor" asp-route-filterId="@item.Id"> @item.Name <span>@item.Quantity </span></a></li>
 								}
 							</ul>
 						</div>
@@ -186,7 +194,7 @@
 															</div>
 															<div class="product-list-wishlist">
 																<a class="btn-hover list-btn-wishlist" href="#">
-																	@GenerateFavoriteIcon(@book.IsFavorite, @book.Id)
+																	@GenerateFavoriteIcon2(@book.IsFavorite, @book.Id)
 																</a>
 															</div>
 														</div>
