--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Favicon -->
 	<link rel="shortcut icon" type="image/x-icon" href="~/img/favicon.png">
+
 	<!-- Thêm CSS của SweetAlert -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
 	<!-- Thêm JavaScript của SweetAlert -->
@@ -28,6 +29,13 @@
 	<link rel="stylesheet" href="~/css/responsive.css">
 	<script src="~/js/vendor/modernizr-3.11.7.min.js"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+	<!-- Thư viện CSS Bootstrap -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+	<!-- Thư viện JavaScript Bootstrap (bao gồm jQuery và Popper.js) -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 	@RenderSection("stylesheets", required: false)
 
 </head>
@@ -48,7 +56,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="header-bottom clearfix">
+	<div class="header-bottom clearfix" id="header_nav">
 		<div class="container">
 			<div class="header-bottom-wrapper">
 				<div class="logo-2 ptb-30">
@@ -59,17 +67,8 @@
 				<div class="menu-style-2 book-menu menu-hover">
 					<nav>
 						<ul>
-							@if (SignInManager.IsSignedIn(User))
-							{
-								var user = await UserManager.GetUserAsync(User);
-								<li><a asp-controller="Home" asp-action="Index" asp-route-userId="@user.Id">home</a></li>
-								<li><a asp-controller="Home" asp-action="Shop" asp-route-userId="@user.Id">shop</a></li>
-							}
-							else
-							{					
-								<li><a asp-controller="Home" asp-action="Index">home</a></li>
-								<li><a asp-controller="Home" asp-action="Shop">shop</a></li>								
-							}
+							<li><a asp-controller="Home" asp-action="Index">home</a></li>
+							<li><a asp-controller="Home" asp-action="Shop">shop</a></li>
 							<li><a asp-controller="Home" asp-action="AboutUs">about us</a></li>
 							<li><a asp-controller="Home" asp-action="Contact">contact</a></li>
 							<li><a asp-controller="Home" asp-action="Help">help</a></li>
