fix review and statistic

--- a/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/Views/Home/Index.cshtml
@@ -93,7 +93,7 @@
 					@foreach (var item in Model.TopGenres)
 					{
 						<div class="tab-pane show fade" id="home_@item.GenreId" role="tabpanel">
-							<div class="custom-row">
+							<div class="custom-row pt-5">
 								@foreach (var book in item.BookGenres)
 								{
 									<div class="custom-col-5 custom-col-style mb-95">
