--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -43,8 +43,14 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-	@RenderSection("stylesheets", required: false)
 
+	@RenderSection("stylesheets", required: false)
+	<style>
+		button{
+			padding: 0;
+			margin: auto;
+		}
+	</style>
 </head>
 @using BusinessObjects
 @using Microsoft.AspNetCore.Identity
