--- a/BookStore/Views/Home/Profile.cshtml
+++ b/BookStore/Views/Home/Profile.cshtml
@@ -116,6 +116,7 @@
 										<thead>
 											<tr>
 												<th>Book Title</th>
+												<th>Image</th>
 												<th>Quantity</th>
 												<th>Unit Price</th>
 											</tr>
@@ -128,7 +129,7 @@
 													<tr>
 														<td>@item.Book.Title</td>
 														<td>
-															<img src="@ViewBag.api/@item.Book.Image" alt="@item.Book.Title" />
+															<img src="@ViewBag.api/@item.Book.Image" class="img-fluid" alt="@item.Book.Title" />
 														</td>
 														<td>@item.Book.Quantity</td>
 														<td>@item.Book.SellingPrice</td>
