--- a/BookStore/Areas/Owner/Views/Books/Index.cshtml
+++ b/BookStore/Areas/Owner/Views/Books/Index.cshtml
@@ -179,7 +179,7 @@
                                         <td>@book.PageCount</td>
                                         <td>@book.LanguageName</td>
                                         <td>
-                                            <div class="flex-column align-items-center">
+                                            <div class="d-flex align-items-center">
                                                 <button type="button" class="btn btn-danger" onclick="deleteBook(@book.Id)">Delete</button>
                                                 <button type="submit" class="btn btn-warning edit-book" data-toggle="modal" data-target="#bookModal" onclick="handleEditButton(@book.Id)">Edit</button>
                                             </div>
