--- a/BookStore/Views/Home/Cart.cshtml
+++ b/BookStore/Views/Home/Cart.cshtml
@@ -12,9 +12,9 @@
 				{
 					<div id="cartEmpty">
 						<img src="/img/cart/empty.gif"
-						style=" display: block; margin-left: auto; margin-right: auto; width: 50%;"/>
+							 style=" display: block; margin-left: auto; margin-right: auto; width: 50%;" />
 						<p class="text-center"
-						style=" display: block; margin-left: auto; margin-right: auto; ">
+						   style=" display: block; margin-left: auto; margin-right: auto; ">
 							Product Cart is empty
 						</p>
 					</div>
@@ -77,8 +77,12 @@
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<div class="coupon-all">
 								<div class="coupon">
-									<input id="coupon_code" class="input-text" name="coupon_code" value="" placeholder="Coupon code" type="text">
-									<button name="apply_coupon" onclick="ApplyDiscount()">Apply coupon</button>
+									<div class="input-group">
+										<input id="coupon_code" class="form-control" name="coupon_code" value="" placeholder="Coupon code" type="text">
+										<div class="input-group-append">
+											<button name="apply_coupon" onclick="ApplyDiscount()" style="height: 42px;" class="btn btn-dark">Apply coupon</button>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -87,14 +91,32 @@
 						<div class="col-md-5 ms-auto">
 							<div class="cart-page-total">
 								<h2>Cart totals</h2>
-								<form asp-controller="Home" asp-action="CheckOut" method="POST">
-									<ul @Model.TotalCart>
-										<li>Subtotal<input readonly asp-for="TotalCart.SubTotal" value="0.00" /></li>
-										<li id="apply_discount" style="display: none">Apply Discount<input readonly asp-for="TotalCart.Discount" id="cart_discount" value="0.00" /></li>
-										<li>Total<input readonly asp-for="TotalCart.Total" value="0.00" /></li>
+								<form method="POST" action="/Home/CheckOut">
+									<ul>
+										<li>
+											Subtotal
+											<div class="justify-content-center d-flex">
+												<span class="align-items-center mt-1 pt-1">$</span>
+												<input style="background: none; border: none;" readonly class="subtotal form-control" value="0.00" type="text" data-val="true" data-val-number="The field SubTotal must be a number." data-val-required="The SubTotal field is required" id="TotalCart_SubTotal" name="TotalCart.SubTotal">
+											</div>
+										</li>
+										<li id="apply_discount" style="display: none">
+											Apply Discount (Percentage %)
+											<div class="justify-content-center d-flex">
+												<input style="background: none; border: none;" readonly id="cart_discount" value="0.00" type="number" data-val="true" data-val-required="The Discount field is required" name="TotalCart.Discount">
+											</div>
+										</li>
+										<li>
+											Total
+											<div class="justify-content-center d-flex">
+												<span class="align-items-center mt-2 pt-1">$</span>
+												<input style="background: none; border: none;" readonly value="0.00" type="text" data-val="true" data-val-number="The field Total must be a number" data-val-required="The Total field is required" id="TotalCart_Total" name="TotalCart.Total" />
+											</div>
+										</li>
 									</ul>
-									<input type="hidden" asp-for="TotalCart.DiscountId" value="0" />
-									<button type="submit" name="button">Proceed to checkout</button>
+									<input type="hidden" value="0" data-val="true" data-val-required="The DiscountId field is required" id="TotalCart_DiscountId" name="TotalCart.DiscountId">
+									<button type="submit" name="button" style="height: 42px;" class="btn btn-dark">Proceed to checkout</button>
+									<input name="__RequestVerificationToken" type="hidden" value="CfDJ8Fd32B-Poi9As0ELOYzi5f5c2F45Nmk4XpZo3OprKnspdBsBuogzZkPmkb5z-uKUAbmAWm0j2gL_ps5ddujeYz-x3OX8iXYr4987NFJYAyBUJSlYva3CRX1E-BKu1tmRvK7v6D3t5Ux7QFVYtz1UhhZsqDzw0YmkoIQ469GV7NEDGAbzmV_ZB0XsJreDYNE_CA">
 								</form>
 							</div>
 						</div>
@@ -106,7 +128,7 @@
 	</div>
 </div>
 @section Scripts {
-	
+
 	<script src="~/js/main.js"></script>
 	<script src="~/js/header.js"></script>
 	<script src="~/js/discount.js"></script>
