--- a/BookStore/Views/Home/CheckOut.cshtml
+++ b/BookStore/Views/Home/CheckOut.cshtml
@@ -9,10 +9,16 @@
 </style>
 <!-- checkout-area start -->
 <div class="checkout-area ptb-100">
-	<div class="container">
+	<div class="container">		
+		<h6 class="py-5 back">
+			<a asp-controller="Home" asp-action="Shop" class="text-body fw-semibold">
+				<i class="fas fa-long-arrow-alt-left ms-5 me-2"></i>
+				Back to shop
+			</a>
+		</h6>
 		<div class="row">
 			<form asp-controller="Payment" asp-action="Save" method="POST">
-				<div class="col-lg-6 col-md-12 col-12">
+				<div class="col-md-12 col-12">
 					<div class="checkbox-form">
 						<h3>Basic Information</h3>
 						<div class="row">
@@ -48,7 +54,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-6 col-md-12 col-12">
+				<div class="col-md-12 col-12">
 					<div class="your-order">
 						<h3>Your order</h3>
 						<div class="your-order-table table-responsive">
@@ -90,10 +96,12 @@
 										<th><strong>Order Total</strong></th>
 										<td>
 											<span>
-												<strong>
-													$
-													<input class="amount" asp-for="Total" readonly value="@ViewBag.totalCart.Total" />
-												</strong>
+												<div class="d-flex justify-content-center">
+													<div class="text-center">
+														<span class="mr-2 align-items-center">$</span>
+														<input class="amount" readonly value="94.94" type="text" data-val="true" data-val-number="The field Total must be a number." data-val-required="The Total field is required" id="Total" name="Total" style="background: none">
+													</div>
+												</div>
 											</span>
 										</td>
 									</tr>
@@ -110,15 +118,7 @@
 					</div>
 				</div>
 			</form>
-		</div>
-		<div class="pt-5">
-			<h6 class="mb-3 back">
-				<a asp-controller="Home" asp-action="Shop" class="text-body fw-semibold">
-					<i class="fas fa-long-arrow-alt-left ms-5 me-2"></i>
-					Back to shop
-				</a>
-			</h6>
-		</div>
+		</div>	
 	</div>
 </div>
 
