--- a/BookStore/Views/Home/Profile.cshtml
+++ b/BookStore/Views/Home/Profile.cshtml
@@ -27,19 +27,19 @@
 				@Html.AntiForgeryToken()
 				<div class="form-group">
 					<label for="username">First Name</label>
-					<input type="text" asp-for="User.FirstName" class="form-control edit" value="@Model.User.FirstName" readonly>
+					<input type="text"  style="background: none; border: none;"  asp-for="User.FirstName" class="form-control edit" value="@Model.User.FirstName" readonly>
 				</div>
 				<div class="form-group">
 					<label for="username">Last Name</label>
-					<input type="text" asp-for="User.LastName" class="form-control edit" value="@Model.User.LastName" readonly>
+					<input type="text"  style="background: none; border: none;"  asp-for="User.LastName" class="form-control edit" value="@Model.User.LastName" readonly>
 				</div>
 				<div class="form-group">
 					<label for="username">Address</label>
-					<input type="text" asp-for="User.Address" class="form-control edit" value="@Model.User.Address" readonly>
+					<input type="text"  style="background: none; border: none;"  asp-for="User.Address" class="form-control edit" value="@Model.User.Address" readonly>
 				</div>
 				<div class="form-group">
 					<label for="email">Email</label>
-					<input type="email" asp-for="User.UserName" class="form-control edit" value="@Model.User.UserName" readonly>
+					<input type="email" style="background: none; border: none;" asp-for="User.UserName" class="form-control edit" value="@Model.User.UserName" readonly>
 				</div>
 			</form>
 		</div>
@@ -61,7 +61,7 @@
 					<input type="password" asp-for="ChangePassword.ConfirmPassword" class="form-control" required>
 					<span asp-validation-for="ChangePassword.ConfirmPassword" class="text-danger"></span>
 				</div>
-				<button type="submit" class="btn btn-dark mt-3">Change Password</button>
+				<button type="submit" style="height: 42px;" class="btn btn-dark mt-3">Change Password</button>
 			</form>
 		</div>
         <div class="tab-pane fade" id="history" role="tabpanel" aria-labelledby="history-tab">
@@ -156,7 +156,7 @@
 						 style=" display: block; margin-left: auto; margin-right: auto; width: 50%;" />
 					<p class="text-center"
 					   style=" display: block; margin-left: auto; margin-right: auto; ">
-						Product Cart is empty
+						Your history is currently empty!
 					</p>
 				</div>
 				<div class="pt-5">
