--- a/BookStore/wwwroot/css/style-admin.css
+++ b/BookStore/wwwroot/css/style-admin.css
@@ -20,12 +20,12 @@ body {
 }
 
 a {
-    color: #f44344;
+    color: #000;
     text-decoration: none;
 }
 
 a:hover {
-    color: #f44344;
+    color: #000;
     text-decoration: none;
 }
 
@@ -64,7 +64,7 @@ h6 {
     font-size: 24px;
     margin-bottom: 0;
     font-weight: 600;
-    color: #f44344;
+    color: #000;
 }
 
 /*--------------------------------------------------------------
@@ -77,7 +77,7 @@ h6 {
     right: 15px;
     bottom: 15px;
     z-index: 99999;
-    background: #f44344;
+    background: #000;
     width: 40px;
     height: 40px;
     border-radius: 4px;
@@ -91,7 +91,7 @@ h6 {
 }
 
 .back-to-top:hover {
-    background: #f44344;
+    background: #000;
     color: #fff;
 }
 
@@ -236,7 +236,7 @@ h6 {
     padding: 20px 0 15px 0;
     font-size: 18px;
     font-weight: 500;
-    color: #f44344;
+    color: #000;
     font-family: "Poppins", sans-serif;
 }
 
@@ -342,12 +342,12 @@ h6 {
 
 .nav-tabs-bordered .nav-link:hover,
 .nav-tabs-bordered .nav-link:focus {
-    color: #f44344;
+    color: #000;
 }
 
 .nav-tabs-bordered .nav-link.active {
     background-color: #fff;
-    color: #f44344;
+    color: #000;
     border-bottom: 2px solid #4154f1;
 }
 
@@ -684,7 +684,7 @@ h6 {
     align-items: center;
     font-size: 15px;
     font-weight: 600;
-    color: #f44344;
+    color: #0035ff;
     transition: 0.3;
     background: #f6f9ff;
     padding: 10px 15px;
@@ -694,25 +694,25 @@ h6 {
 .sidebar-nav .nav-link i {
     font-size: 16px;
     margin-right: 10px;
-    color: #f44344;
+    color: #0035ff;
 }
 
 .sidebar-nav .nav-link.collapsed {
-    color: #f44344;
+    color: #0035ff;
     background: #fff;
 }
 
 .sidebar-nav .nav-link.collapsed i {
-  color: #899bbd;
+  color: #0035ff;
 }
 
 .sidebar-nav .nav-link:hover {
-    color: #f44344;
+    color: #0035ff;
     background: #f6f9ff;
 }
 
 .sidebar-nav .nav-link:hover i {
-    color: #f44344;
+    color: #0035ff;
 }
 
 .sidebar-nav .nav-link .bi-chevron-down {
@@ -735,7 +735,7 @@ h6 {
     align-items: center;
     font-size: 14px;
     font-weight: 600;
-    color: #f44344;
+    color: #0035ff;
     transition: 0.3;
     padding: 10px 0 10px 40px;
     transition: 0.3s;
@@ -750,7 +750,7 @@ h6 {
 
 .sidebar-nav .nav-content a:hover,
 .sidebar-nav .nav-content a.active {
-  color: #f44344;
+  color: #000;
 }
 
 .sidebar-nav .nav-content a.active i {
@@ -821,7 +821,7 @@ h6 {
 }
 
 .dashboard .sales-card .card-icon {
-    color: #f44344;
+    color: #000;
     background: #f6f6fe;
 }
 
