--- a/BookStore/Views/Home/Contact.cshtml
+++ b/BookStore/Views/Home/Contact.cshtml
@@ -9,7 +9,7 @@
                 <li><a asp-controller="Home" asp-action="Index">home</a></li>
                 <li> contact us</li>
             </ul>
-        </div>
+        </div>s
     </div>
 </div>
 <!-- shopping-cart-area start -->
